# OptiBProg

./: .gitignore  CMakeLists.txt  Graph1.lgf  Graph4.lgf  Graph4_Terminals1.txt  Graph5_Terminals2.txt  Main.cpp  README.md  check.cpp  myShortestPath.cpp  mySpanningTree.cpp  mySpanningTree.h  randomVertex.cpp  types.h
OptiBProg1/: Graph4_Terminals4.txt  Graph5.lgf  Graph5_Terminals3.txt  Graph6.lgf  Main.cpp  check.h  myShortestPath.cpp  myShortestPath.h  mySteinerTree.cpp
OptiBProg3/: FootballBettingGameParser.cpp  MyFootballBettingGame.cpp  MyMaxFlow.cpp  MyMaxWeightedMatching.h  check.cpp  main.cpp  randomVertex.cpp  randomVertex.h  readLgf.cpp  readLgf.h  types.h  vplsetup
Task01/: Graph4_Terminals2.txt  Graph4_Terminals3.txt  Graph5_Terminals1.txt  Graph6_Terminals.txt  mySpanningTree.cpp  mySpanningTree.h  readLgf.cpp  types.h
Task02/: CMakeLists.txt  FootballBettingGameParser.h  MyBipartition.cpp  MyBipartition.h  MyFootballBettingGame.h  MyMaxFlow.cpp  MyMaxFlow.h  MyMaxWeightedMatching.cpp  check.h  maximum_weighted_matching.hpp  vpl_evaluate.cases
